--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -1,3 +1,4 @@
 @import "~bootstrap/scss/bootstrap";
 @import "~bootstrap/scss/functions";
 @import "./helpers/variables";
+@import "./dashboard.scss";
